Adding the jvm arguments to the jar